# claimatic

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yaml
n8n/: docker-compose.yml
ollama-mistral/: Dockerfile  Modelfile  entrypoint.sh
src/: main.py
src/api/: dependencies.py
src/api/v1/: claims_api.py  health_check.py
src/api/v1/utils/: sentiment.py  translate.py
src/core/: config.py  decorators.py  logging_config.py
src/db/: claims.db  database.py
src/llms/: categorizer.py  translator.py
src/schemas/: keywords.py  schemas.py
tests/: test_placeholder.py
