[tool.poetry]
name = "claimatic"
version = "0.1.0"
description = "Auto-process public claims with LLM sentiment/category analysis + n8n workflows."
authors = ["dmvaled <dmvaled@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = [
  "claim", "ai", "auto", "process", "LLM", "analysis", "n8n", "Telegram", "Sheets", "solution"
]

[tool.poetry.dependencies]
python = "^3.12"
python-multipart = "^0.0.20"
dotenv = "^0.9.9"
loguru = "^0.7.3"
pydantic = "^2.7.1"
uvicorn = "^0.35.0"
fastapi = "^0.115.14"
aiohttp = "^3.12.13"
aiosqlite = "^0.21.0"
transformers = "^4.52.4"
torch = "2.2.2"
numpy = "<2.0"
safetensors = "^0.5.3"
sentencepiece = "^0.2.0"
sacremoses = "^0.1.1"
poetry-core = ">=2.0.0,<3.0.0"
openai = "^1.93.0"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"
black = "^25.1.0"
mypy = "^1.16.0"
pre-commit = "^4.2.0"

[tool.poetry.group.test.dependencies]
pytest-cov = "^5.0.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.23.0"

[tool.poetry.scripts]
run-test = "pytest"

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true
unsafe-fixes = true

[tool.ruff.lint]
extend-select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
force-single-line = true
combine-as-imports = false
force-sort-within-sections = true
lines-after-imports = 2

[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false

[tool.pytest.ini_options]
addopts = "-ra -q"
python_files = "test_*.py"
python_functions = "test_*"
testpaths = ["tests"]

[tool.mypy]
config_file = "mypy.ini"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
